# embedded-fw-base

./: CMakeLists.txt  README.md
libs/: CMakeLists.txt
libs/FreeRTOS/: CMakeLists.txt  README.md
libs/FreeRTOS/cmsis-rtos2/: cmsis_os2.c
libs/arm_cmsis/: CMakeLists.txt
libs/etl/: CMakeLists.txt  README.md
libs/libc/: CMakeLists.txt
libs/libc/Includes/: cstdint  ctype.h  math.h  stdlib.h  string.h  time.h
libs/libc/Sources/math/: logf.c
libs/libc/Sources/stdlib/: atoi.c
libs/libc/Sources/string/: strcasecmp.c  strcasestr.c  strstr.c
libs/lwip/: CMakeLists.txt  README.md
libs/lwip/Includes/arch/: cc.h
libs/mbedtls/: CMakeLists.txt  README.md
libs/nanopb/: CMakeLists.txt  README.md
libs/segger-rtt/: CMakeLists.txt  README.md
libs/segger-rtt/Includes/: SEGGER_RTT.h
libs/segger-rtt/Sources/: SEGGER_RTT.c
libs/spiffs/: CMakeLists.txt  README.md
libs/tinycbor/: CMakeLists.txt  README.md
libs/util/: CMakeLists.txt  README.md
libs/util/Includes/Util/: Bcd.h  Crc32.h  Date.h  Uuid.h
libs/util/Sources/: Date.cpp  Hash.cpp
libs/uzlib/: CMakeLists.txt  README.md
targets/: README.md
targets/efr32xg23/: README.md  target.txt
targets/efr32xg23/common/: CMakeLists.txt  README.md
targets/efr32xg23/crypto/: CMakeLists.txt
targets/efr32xg23/crypto/se-manager/: CMakeLists.txt
targets/efr32xg23/driver/: CMakeLists.txt
targets/efr32xg23/driver/debug/: CMakeLists.txt
targets/efr32xg23/emdrv/: CMakeLists.txt
targets/efr32xg23/emdrv/common/: CMakeLists.txt
targets/efr32xg23/emdrv/dmadrv/: CMakeLists.txt
targets/efr32xg23/emdrv/gpiointerrupt/: CMakeLists.txt
targets/efr32xg23/emdrv/spidrv/: CMakeLists.txt
targets/efr32xg23/emdrv/tempdrv/: CMakeLists.txt
targets/efr32xg23/emdrv/uartdrv/: CMakeLists.txt
targets/efr32xg23/emlib/: CMakeLists.txt
targets/efr32xg23/peripheral/: CMakeLists.txt
targets/efr32xg23/peripheral/sysrtc/: CMakeLists.txt
targets/efr32xg23/rail/: CMakeLists.txt  README.md
targets/efr32xg23/rail/plugins/: CMakeLists.txt
targets/efr32xg23/rail/plugins/callbacks/: CMakeLists.txt
targets/efr32xg23/rail/plugins/dma/: CMakeLists.txt
targets/efr32xg23/rail/plugins/pa/: CMakeLists.txt
targets/efr32xg23/rail/plugins/protocol/: CMakeLists.txt
targets/efr32xg23/rail/plugins/rfpath/: CMakeLists.txt
targets/efr32xg23/rail/plugins/rssi/: CMakeLists.txt
targets/efr32xg23/service/: CMakeLists.txt  README.md
targets/efr32xg23/service/device_init/: CMakeLists.txt
targets/efr32xg23/service/sleeptimer/: CMakeLists.txt
targets/efr32xg23/startup/: CMakeLists.txt  README.md
targets/efr32xg23/startup/Sources/: Startup.c  Vectors.c
targets/stm32f4xx/: target.txt
targets/stm32f4xx/vendor-st/: CMakeLists.txt  README.md
targets/stm32f4xx/vendor-st/Includes/config/: stm32f4xx_hal_conf.h
targets/stm32f4xx/vendor-st/Sources/Startup/: system_stm32f4xx.c
targets/stm32mp15x/: target.txt
targets/stm32mp15x/vendor-st/: CMakeLists.txt  README.md
