####################################################################################################
# Gecko SDK driver umbrella include
####################################################################################################

add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/debug EXCLUDE_FROM_ALL)
