####################################################################################################
# Gecko SDK Services umbrella include
#
# We'll include all supported services build files here.
####################################################################################################

add_subdirectory(${CMAKE_CURRENT_LIST_DIR}/device_init EXCLUDE_FROM_ALL)
